// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SpotifyPlaylist Component > matches the snapshot 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col justify-between h-full p-4  rounded-xl 
    bg-app-lightModeBoxes-box16 
    dark:bg-app-darkModeBoxes-box16 
    dark:border-app-lightModeBoxes-box16 
    border-app-darkModeBoxes-box16
    border-[2px]"
  >
    <div
      class="mb-4"
    >
      <h2
        class="text-xl font-bold mb-2 text-black dark:text-white"
      >
        My Favorite Playlist
      </h2>
      <p
        class="text-black dark:text-white"
      >
        Enjoy my personal selection of songs in this playlist. Listen to it and let yourself be carried away by the rhythm!
      </p>
    </div>
    <div
      class="mt-auto"
    >
      <iframe
        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
        class="rounded-xl"
        data-testid="spotify-playlist-iframe"
        height="379px"
        loading="lazy"
        src="https://open.spotify.com/embed/playlist/2Z8vIZcBXeeCfcmkffrTlR?utm_source=generator"
        width="100%"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`SpotifyPlaylist Component > renders correctly in desktop view 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col justify-between h-full p-4  rounded-xl 
    bg-app-lightModeBoxes-box16 
    dark:bg-app-darkModeBoxes-box16 
    dark:border-app-lightModeBoxes-box16 
    border-app-darkModeBoxes-box16
    border-[2px]"
  >
    <div
      class="mb-4"
    >
      <h2
        class="text-xl font-bold mb-2 text-black dark:text-white"
      >
        My Favorite Playlist
      </h2>
      <p
        class="text-black dark:text-white"
      >
        Enjoy my personal selection of songs in this playlist. Listen to it and let yourself be carried away by the rhythm!
      </p>
    </div>
    <div
      class="mt-auto"
    >
      <iframe
        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
        class="rounded-xl"
        data-testid="spotify-playlist-iframe"
        height="379px"
        loading="lazy"
        src="https://open.spotify.com/embed/playlist/2Z8vIZcBXeeCfcmkffrTlR?utm_source=generator"
        width="100%"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`SpotifyPlaylist Component > renders correctly in mobile view 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col justify-between h-full p-4  rounded-xl 
    bg-app-lightModeBoxes-box16 
    dark:bg-app-darkModeBoxes-box16 
    dark:border-app-lightModeBoxes-box16 
    border-app-darkModeBoxes-box16
    border-[2px]"
  >
    <div
      class="mb-4"
    >
      <h2
        class="text-xl font-bold mb-2 text-black dark:text-white"
      >
        My Favorite Playlist
      </h2>
      <p
        class="text-black dark:text-white"
      >
        Enjoy my personal selection of songs in this playlist. Listen to it and let yourself be carried away by the rhythm!
      </p>
    </div>
    <div
      class="mt-auto"
    >
      <iframe
        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
        class="rounded-xl"
        data-testid="spotify-playlist-iframe"
        height="152px"
        loading="lazy"
        src="https://open.spotify.com/embed/playlist/2Z8vIZcBXeeCfcmkffrTlR?utm_source=generator"
        width="100%"
      />
    </div>
  </div>
</DocumentFragment>
`;
